--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,10 +2,11 @@ name: CI workflow
 
 on:
   push:
-    branches: https://github.com/KARTIK-RAINA5802/ci-cd-final-project.git
+    branches:
+      - main  
   pull_request:
-    branches: https://github.com/KARTIK-RAINA5802/ci-cd-final-project.git
-
+    branches:
+      - main  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,13 +14,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install dependencies
         run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Lint with flake8
         run: |
-        flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 service --count --max-complexity=10 --max-line-length=127 --statistics 
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
